# openairinterface5g

./: README.txt  maketags  oaienv
cmake_targets/: CMakeLists.txt  Kbuild.cmake  build_helper.bash  build_oai  build_oai.bash  generate_asn1.bash  init_exmimo2.sh
cmake_targets/at_commands/: CMakeLists.txt
cmake_targets/autotests/: run_compilation_autotests.bash  run_exec_autotests.bash
cmake_targets/doxygen/: CMakeLists.txt
cmake_targets/epc_build_oai/: CMakeLists.template
cmake_targets/hss_build/: CMakeLists.txt  acl.conf.in  hss.conf.in  hss_fd.conf.in
cmake_targets/lte-r10-exmimo/: CMakeLists.txt
cmake_targets/lte-r10-usrp/: CMakeLists.txt
cmake_targets/lte-r8/: CMakeLists.txt
cmake_targets/lte-simulators/: CMakeLists.txt
cmake_targets/lte_build_oai/: CMakeLists.txt
cmake_targets/lte_noS1_build_oai/: CMakeLists.txt
cmake_targets/nas_sim_tools/: CMakeLists.txt
cmake_targets/oaisim-r10/: CMakeLists.txt
cmake_targets/oaisim-r8/: CMakeLists.txt
cmake_targets/oaisim_build_oai/: CMakeLists.template  CMakeLists.txt
cmake_targets/oaisim_mme_build_oai/: CMakeLists.template
cmake_targets/oaisim_noS1_build_oai/: CMakeLists.template
cmake_targets/s1c_mme_test/: CMakeLists.template
cmake_targets/test.0101/: CMakeLists.txt
cmake_targets/test.0102/: CMakeLists.txt
cmake_targets/test.0103/: CMakeLists.txt
cmake_targets/test.0104/: CMakeLists.txt
cmake_targets/test.0106/: CMakeLists.txt
cmake_targets/test.0107/: CMakeLists.txt
cmake_targets/test.0108/: CMakeLists.txt
cmake_targets/test.0113/: CMakeLists.txt
cmake_targets/test.0114/: CMakeLists.txt
cmake_targets/test.0115/: CMakeLists.txt
cmake_targets/tools/: build_epc  build_helper  build_helper.bash  build_hss  check_hss_s6a_certificate  check_mme_s6a_certificate  create_hss_database  epc.conf.in  epc.local.enb.conf.in  example_enb_exmimo_mme_hss.txt  example_oaisim_enb_ue_mme_virtual.txt  exmimo2_2arxg.lime  generate_asn1  indent_source_code  init_exmimo2  init_exmimo2.sh  init_nas_nos1  mem_usage.sh  perf_oai.bash  run_enb_s1_exmimo  run_enb_s1_usrp  run_enb_ue_virt_noS1  run_enb_ue_virt_s1  run_epc  run_hss  s6a.conf.in  test_helper
openair-cn/: ChangeLog  INTERTASK_INTERFACE  Makefile.am  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  cppcheck.sh  valgrind.sh
openair-cn/COMMON/: as_message.h  commonDef.h  common_types.h  gtpv1_u_messages_def.h  gtpv1_u_messages_types.h  intertask_interface_conf.h  ip_forward_messages_def.h  ip_forward_messages_types.h  messages_def.h  messages_types.h  mme_app_messages_def.h  mme_app_messages_types.h  nas_messages_def.h  nas_messages_types.h  s11_messages_def.h  s11_messages_types.h  s1ap_messages_def.h  s1ap_messages_types.h  s6a_messages_def.h  s6a_messages_types.h  sctp_messages_def.h  sctp_messages_types.h  security_types.h  sgw_lite_def.h  sgw_lite_messages_types.h  tasks_def.h  udp_messages_def.h  udp_messages_types.h
openair-cn/DOCS/: EPC_User_Guide.docx  Makefile.am
openair-cn/GTPV1-U/: Makefile.am  Makefile.eNB  gtpv1u.h  gtpv1u_eNB.c  gtpv1u_eNB_defs.h  gtpv1u_eNB_task.h  gtpv1u_sgw_defs.h  gtpv1u_task.c  gtpv1u_teid_pool.c
openair-cn/GTPV2-C/: Makefile.am
openair-cn/INTERTASK_INTERFACE/: intertask_interface.c  intertask_interface.h  intertask_interface_dump.c  intertask_interface_dump.h  intertask_interface_init.h  intertask_interface_types.h  intertask_messages_def.h  timer.h  timer_messages_def.h  timer_messages_types.h
openair-cn/MME_APP/: Makefile.am  mme_app_authentication.c  mme_app_bearer.c  mme_app_capabilities.c  mme_app_config.c  mme_app_config.h  mme_app_context.c  mme_app_defs.h  mme_app_extern.h  mme_app_itti_messaging.h  mme_app_location.c  mme_app_main.c  mme_app_statistics.c  mme_app_statistics.h  mme_app_ue_context.h  s6a_2_nas_cause.c
openair-cn/NAS/: Makefile.UE  Makefile.am  Makefile.inc  nas_defs.h  nas_itti_messaging.c  nas_itti_messaging.h  nas_main.c  nas_ue_task.c
openair-cn/OAISIM_MME/: Makefile.am  oai_mme_log.c  oaisim_mme.c  oaisim_mme.h
openair-cn/OAI_EPC/: Makefile.am  oai_epc.c  oai_epc.h  oai_epc_log.c
openair-cn/OAI_SGW/: Makefile.am  oai_sgw.c  oai_sgw.h  oai_sgw_log.c
openair-cn/OPENAIRHSS/: Makefile.am  README  configure.ac  hss_main.c
openair-cn/S11/: Makefile.am  s11_common.c  s11_common.h  s11_ie_formatter.c  s11_ie_formatter.h  s11_mme.h  s11_mme_peer_manager.c  s11_mme_session_manager.c  s11_mme_session_manager.h  s11_mme_task.c  s11_sgw.c  s11_sgw.h  s11_sgw_bearer_manager.c  s11_sgw_bearer_manager.h  s11_sgw_session_manager.c  s11_sgw_session_manager.h
openair-cn/S1AP/: Makefile.am  Makefile.eNB  Makefile.inc  s1ap_common.c  s1ap_common.h  s1ap_eNB.c  s1ap_eNB.h  s1ap_eNB_context_management_procedures.c  s1ap_eNB_context_management_procedures.h  s1ap_eNB_decoder.c  s1ap_eNB_decoder.h  s1ap_eNB_default_values.h  s1ap_eNB_defs.h  s1ap_eNB_encoder.c  s1ap_eNB_encoder.h  s1ap_eNB_handlers.c  s1ap_eNB_handlers.h  s1ap_eNB_itti_messaging.c  s1ap_eNB_itti_messaging.h  s1ap_eNB_management_procedures.c  s1ap_eNB_management_procedures.h  s1ap_eNB_nas_procedures.c  s1ap_eNB_nas_procedures.h  s1ap_eNB_nnsf.c  s1ap_eNB_nnsf.h  s1ap_eNB_overload.c  s1ap_eNB_overload.h  s1ap_eNB_trace.c  s1ap_eNB_trace.h  s1ap_eNB_ue_context.c  s1ap_eNB_ue_context.h  s1ap_mme.c  s1ap_mme.h  s1ap_mme_decoder.c  s1ap_mme_decoder.h  s1ap_mme_encoder.c  s1ap_mme_encoder.h  s1ap_mme_handlers.c  s1ap_mme_handlers.h  s1ap_mme_itti_messaging.c  (+7 more)
openair-cn/S6A/: Makefile.am  s6a_apn_conf.c  s6a_auth_info.c  s6a_defs.h  s6a_dict.c  s6a_error.c  s6a_messages.h  s6a_peer.c  s6a_subscription_data.c  s6a_task.c  s6a_up_loc.c
openair-cn/SCRIPTS/: install_asn1c_0.9.24.modified.bash  install_openvswitch1.9.0.bash  start_enb.bash  start_lte-enb-ovs.bash  start_lte-epc-ovs.bash  start_lte-epc.bash  start_lte-sgw.bash  start_mme.bash  start_router.eur.bash  start_router.nord.eur.bash  start_spgw.bash  utils.bash
openair-cn/SCTP/: Makefile.am  Makefile.eNB  sctp_common.c  sctp_common.h  sctp_default_values.h  sctp_eNB_defs.h  sctp_eNB_itti_messaging.c  sctp_eNB_itti_messaging.h  sctp_eNB_task.c  (+7 more)
(+5378 files in other folders)
